# PE-x86-Parser

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Symbol.cpp  cns.cpp  exp.hpp  exportMod.cpp  header.cpp  importMod.cpp  main.cpp  parser.cpp  pe_header.cpp  peh.hpp  section_pe.cpp  symbols.cpp
neyPe64 parser/: Symbol.cpp  exportMod.cpp  importMod.cpp  main.cpp  peh.hpp
src/: exp.hpp  export_table.cpp  import_table.cpp  main.cpp  parser.cpp  section_pe.cpp  symbols.cpp
src/x32/: header_pe.cpp
src/x64/: header_pe.cpp
x32/: exportT.cpp  header_pe.cpp  importT.cpp  importTable.cpp
x64/: exportT.cpp  header_pe.cpp  importT.cpp  importTable.cpp
